--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "My own framework for web with node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node-lts": "^18.12.5",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.6.0",
+    "concurrently": "^8.2.1",
+    "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
