--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.0",
     "concurrently": "^8.2.1",
+    "ejs": "^3.1.9",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   },
